<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_layout_image_view_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login_layout_edit_text_login_or_email"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="65dp"
            android:hint="@string/login_lyout_edit_text_login_or_email_text" />

        <EditText
            android:id="@+id/login_layout_edit_text_password"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="65dp"
            android:hint="@string/login_lyout_edit_text_password" />

        <ProgressBar
            android:id="@+id/login_layout_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/login_layout_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222222"
            android:textColor="#E0F7FA"
            android:text="@string/login_lyout_btn_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E0F7FA"
            android:text="@string/or" />

        <Button
            android:id="@+id/login_layout_btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222222"
            android:textColor="#E0F7FA"
            android:text="@string/login_layout_btn_create_account_string" />

        <Button
            android:id="@+id/login_layout_btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Test" />

        <Button
            android:id="@+id/login_layout_btn_test_select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="TestSelectImage" />

    </LinearLayout>
</ScrollView>